add plot to RF and mse history to RF_MSE

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -17,11 +17,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ensembles import RandomForestMSE, GradientBoostingMSE"
+    "from server.src.ensembles import RandomForestMSE, GradientBoostingMSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from scipy.optimize import minimize_scalar\n",
+    "import time\n",
+    "class RandomForestMSE:\n",
+    "    def __init__(self, n_estimators=20, max_depth=None, feature_subsample_size=None,\n",
+    "                 **trees_parameters):\n",
+    "        \"\"\"\n",
+    "        n_estimators : int\n",
+    "            The number of trees in the forest.\n",
+    "\n",
+    "        max_depth : int\n",
+    "            The maximum depth of the tree. If None then there is no limits.\n",
+    "\n",
+    "        feature_subsample_size : float\n",
+    "            The size of feature set for each tree. If None then use recommendations.\n",
+    "        \"\"\"\n",
+    "        self.n_estimators = n_estimators\n",
+    "        self.max_depth = max_depth\n",
+    "        self.feature_subsample_size = feature_subsample_size\n",
+    "        self.trees_parameters = trees_parameters\n",
+    "\n",
+    "    def fit(self, X, y, verbose=False, X_val=None, y_val=None):\n",
+    "        \"\"\"\n",
+    "        X : numpy ndarray\n",
+    "            Array of size n_objects, n_features\n",
+    "\n",
+    "        y : numpy ndarray\n",
+    "            Array of size n_objects\n",
+    "        \"\"\"\n",
+    "        if self.feature_subsample_size is None:\n",
+    "            self.feature_subsample_size = X.shape[1]\n",
+    "\n",
+    "        inds = np.arange(X.shape[0])\n",
+    "        self.trees_ensemble = []\n",
+    "\n",
+    "        x_res = []\n",
+    "        y = []\n",
+    "\n",
+    "        for i in range(self.n_estimators):\n",
+    "            algo = DecisionTreeRegressor(max_features=self.feature_subsample_size,\n",
+    "                                         max_depth=self.max_depth,\n",
+    "                                         **self.trees_parameters)\n",
+    "            \n",
+    "            sample = np.random.choice(inds, len(inds) // 3)\n",
+    "            \n",
+    "            print(len(sample), len(y))\n",
+    "            algo.fit(X[sample], y[sample])\n",
+    "\n",
+    "            self.trees_ensemble.append(algo)\n",
+    "\n",
+    "            if verbose:\n",
+    "                x.append(i)\n",
+    "                pred = self.predict(X_val)\n",
+    "\n",
+    "                y.append(rmse(y_val, pred))\n",
+    "\n",
+    "        if verbose:\n",
+    "            return x, y\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        \"\"\"\n",
+    "        X : numpy ndarray\n",
+    "            Array of size n_objects, n_features\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        y : numpy ndarray\n",
+    "            Array of size n_objects\n",
+    "        \"\"\"\n",
+    "        ans = np.zeros_like(X[:, 0])\n",
+    "        for algo in self.trees_ensemble:\n",
+    "            ans += algo.predict(X)\n",
+    "\n",
+    "        ans /= len(self.trees_ensemble)\n",
+    "\n",
+    "        return ans"
    ]
   },
   {
@@ -33,13 +118,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('regression_houses_2020/train_data.csv')\n",
     "y_data = pd.read_csv('regression_houses_2020/train_target.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_data = data[data.columns[1:]]\n",
+    "y_data = data[data.columns[0]]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(x_data.values, y_data.values.reshape(-1),\n",
+    "                                                    train_size=0.8,\n",
+    "                                                    random_state=241)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 5, 2])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train[[1,2 ,3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4608 0\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "only integer scalar arrays can be converted to a scalar index",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-55-f456a8b0eda4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m                             \u001b[0mfeature_subsample_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                             )\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtmp_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-51-33a9d781e1b5>\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, verbose, X_val, y_val)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m             \u001b[0malgo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrees_ensemble\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malgo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: only integer scalar arrays can be converted to a scalar index"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "tmp_model = RandomForestMSE(n_estimators=3,\n",
+    "                            max_depth=3,\n",
+    "                            feature_subsample_size=3,\n",
+    "                            )\n",
+    "x, y = tmp_model.fit(X_train, y_train, True, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_model = RandomForestMSE(n_estimators=3,\n",
+    "                            max_depth=3,\n",
+    "                            feature_subsample_size=3,\n",
+    "                            )\n",
+    "x, y = tmp_model.fit(X_train, y_train, True, X_test, y_test)\n",
+    "bar = create_plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
